stylesheet.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
    font-family: "Imprima";
    font-size: calc(1rem + 0.6vw);
	color: black;
	background-color: #2c373b;
	line-height: 1.5;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

#wrapper {
	align-items: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	min-height: 100vh;
	max-height: 100vh;
	overflow: hidden;
	position: relative;
	z-index: 2;
}

#header {
	display: flex;
	align-items: end;
	height: fit-content;
	margin-top: 1.5vh;
	color: whitesmoke;
	width: 50vw;
	min-width: 350px;
	margin-bottom: 1.5vh;
}

#userName {
	margin-left: 1vw;
	font-size: calc(1.5rem + 1.8vw);
}

#selectionBar {
	border: solid 4px #fffdf7;
	background-color: #fffdf7;
	border-bottom: none;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	height: calc(7vh - 1vw);
	min-height: 5vh;
	width: 50vw;
	min-width: 350px;
	font-size: 0;
}

button {
	border: none;
	width: 10vw;
	min-width: 70px;
	font-size: calc(0.7rem + 0.7vw);
	font-family: "Imprima";
	display: inline-flex;
	justify-content: center;
	line-height: 1.5;
	height: inherit;
}

.inactiveButton:hover {
	background-color: gray;
}

.activeButton {
	background-color: #fffdf7;
	color: black;
}

.inactiveButton {
	background-color: #2c373b;
	color: white;
}

#aboutMeButton {
	border-top-left-radius: 5px;
}

#creditsButton {
	border-top-right-radius: 5px;
}

section {
	border: solid 4px #fffdf7;
	border-top: none;
	background-color: #fffdf7;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	height: 70vh;
	width: 50vw;
	min-width: 350px;
}

#footer {
	border: solid 4px #fffdf7;
	background-color: #fffdf7;
	border-radius: 10px;
	margin-top: 3vh;
	margin-bottom: 3vh;
	width: 50vw;
	min-width: 350px;
	display: flex;
	justify-content: center;	
}

.logoPair a {
	display: flex;
	margin-top: 10px;
	min-height: 20px;
	height: 1.3vw;
}

svg {
	min-width: 20px;
	min-height: 20px;
	width: 1.3vw;
	height: 1.3vw;
}

.fadeInAnim {
	animation-name: fadeIn;
	animation-duration: 500ms;
}

.fadeOutAnim {
	animation-name: fadeOut;
	animation-duration: 500ms;
}

.header {
	text-align: center;
	font-size: calc(1.6rem + 0.6vw);
	margin-top: 3vh;
	margin-bottom: 3vh;
}

p {
	margin-left: 2vw;
	margin-right: 2vw;
}

#userFrame {
	width: 15vw;
	max-width: 192px;
	min-width: 100px;
}

.logoPair {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin-left: 5vw;
	margin-right: 5vw;
}

@keyframes fadeIn {
	from {opacity: 0;}
	to {opacity: 1;}
}

@keyframes fadeOut {
	from {opacity: 1;}
	to {opacity: 0;}
}

